Fix overflow y

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,5 @@
 header {
-  width: calc(100% - 32px);
+  width: 100%;
   height: 60px;
   display: block;
   padding: 0 16px;
